# pdfonlytext

./: README.md  pyproject.toml
pdftext/: extraction.py  postprocessing.py
pdftext/pdf/: chars.py  pages.py
