[tool.poetry]
name = "pdfonlytext"
version = "0.6.4"
description = "Extract only structured text from pdfs quickly. Adapted from https://github.com/VikParuchuri/pdftext"
authors = ["Dimas Rizky <dimasrizkyk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/desolaterobot/pdfonlytext"
keywords = ["pdf", "text", "extraction"]
packages = [
    {include = "pdftext"}
]

[tool.poetry.dependencies]
python = "^3.10"
pypdfium2 = "=4.30.0"
numpy = "^1.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"